log
do., 21 de sep. de 2025 23:44:13: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
do., 21 de sep. de 2025 23:49:20: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:15: error: variable 'last' set but not used [-Werror=unused-but-set-variable]
     TreeNode *last = NULL;
               ^~~~
cc1.exe: all warnings being treated as errors
9838868
do., 21 de sep. de 2025 23:49:47: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
afdab4a
